# Smarthome_ESP32

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsUser.txt  IR_Connector.h  IR_Gadget.h  MQTT_Connector.h  README.md  REST_Connector.h  SH_Client.cpp  SH_Client.h  SH_Debug_LED.cpp  SH_Debug_LED.h  SH_Gadget.h  SH_LED.cpp  SH_LED.h  SH_Lamp_Basic.h  SH_Lamp_NeoPixel.h  SH_Lamp_NeoPixel_Basic.h  SH_NeoPixel_LED.h  SH_Wallswitch.cpp  SH_Wallswitch.h  User_Settings.h  config_sample.json  eeprom_layout.md  gadget_doc.md  gadgets.md  generate_extra_info.py  generate_static_config.py  generate_static_config_template.h  network_credentials.h  platformio.ini  prepare_cmake_for_tests.py  remotes.xml  sh_mqtt_client.ino  static_functions_config_template.h  static_string_config_template.h  uml.drawio  uml.xml
.github/ISSUE_TEMPLATE/: bug.yml  change.yml  feature.yml
.github/workflows/: git_history.yml  platformio.yml  repo_checks.yml  submodule_branch.yml
.run/: Prepare CMake for Catch Tests.run.xml  Run Tests Clean.run.xml  Run Tests.run.xml
TestLib/: CMakeLists.txt
monitor/: filter_custom_exception_decoder.py
src/: CMakeLists.txt  README.md  api_manager.cpp  api_manager.h  api_manager_delegate.cpp  api_manager_delegate.h  audio_file.h  audio_player.h  boot_mode.h  client_main.cpp  client_main.h  color.cpp  color.h  colors.h  console_logger.cpp  console_logger.h  crc_calculator.cpp  crc_calculator.h  datatypes.h  event_manager.cpp  event_manager.h  gadget_collection.cpp  gadget_collection.h  gadget_factory.cpp  gadget_factory.h  gadget_manager.cpp  gadget_manager.h  hardware_controller.cpp  hardware_controller.h  hardware_link.h  helping_structures.h  ip_container.cpp  ip_container.h  ir_connector.h  ir_gadget.h  json_check.h  json_validator.cpp  json_validator.h  main.ino  main_system_controller.cpp  (+31 more)
src/api/: api_decoder.cpp  api_decoder.h  api_encoder.cpp  api_encoder.h  api_manager.cpp  api_manager.h  api_manager_delegate.cpp  api_manager_delegate.h  characteristic_meta.cpp  characteristic_meta.h  characteristic_update_meta.cpp  characteristic_update_meta.h  client_meta.cpp  client_meta.h  config_decoder.cpp  config_decoder.h  gadget_meta.cpp  gadget_meta.h  gadget_meta_coder.cpp  gadget_meta_coder.h  gadget_update_meta.cpp  gadget_update_meta.h  protocol_paths.h
src/config_writing/: config_keys.h
src/configs/: config_test1.h  config_test2.h  config_unit_test.h
src/connectors/: code_command.cpp  code_command.h  code_command_buffer.cpp  code_command_buffer.h  code_connector.h  code_gadget.cpp  code_gadget.h  connectors.cpp  connectors.h  event.cpp  event.h  homebridge_connector.h  ir_connector.h  ir_gadget.cpp  ir_gadget.h  mqtt_connector.h  mqtt_gadget.cpp  mqtt_gadget.h  radio_connector.h  radio_gadget.cpp  radio_gadget.h  request.cpp  request.h  request_connector.h  request_gadget.cpp  request_gadget.h  request_queue.cpp  request_queue.h  rest_connector.h  rest_gadget.h  serial_connector.h  serial_gadget.cpp  serial_gadget.h  smarthome_remote_helper.h  split_request_buffer.cpp  split_request_buffer.h  wifi_gadget.cpp  wifi_gadget.h
src/gadgets/: characteristic.cpp  characteristic.h  doorbell.cpp  doorbell.h  doorbell_basic.cpp  doorbell_basic.h  fan.cpp  fan.h  fan_westinghouse_ir.cpp  fan_westinghouse_ir.h  gadget.cpp  gadget.h  gadget_characteristic_settings.h  gadget_enums.h  gadget_library.h  ir_gadget.h  lamp_basic.cpp  lamp_basic.h  lamp_neopixel.cpp  lamp_neopixel.h  lamp_neopixel_basic.cpp  lamp_neopixel_basic.h  lamp_onoff.cpp  lamp_onoff.h  lamp_rgb.cpp  lamp_rgb.h  lamp_westinghouse_ir.cpp  lamp_westinghouse_ir.h  sensor_motion.cpp  sensor_motion.h  sensor_motion_HR501.cpp  sensor_motion_HR501.h  sensor_temperature.cpp  sensor_temperature.h  sensor_temperature_DHT.cpp  sensor_temperature_DHT.h  sh_doorbell.cpp  sh_doorbell.h  sh_doorbell_basic.cpp  sh_doorbell_basic.h  (+35 more)
src/helpers/: threadsafe_queue.h
src/power_management/: battery_manager.cpp  battery_manager.h  grid_manager.cpp  grid_manager.h  power_manager.cpp  power_manager.h
src/remotes/: Event.cpp  Event.h  code_remote.cpp  code_remote.h  event_remote.cpp  event_remote.h  gadget_remote.cpp  gadget_remote.h  homebridge_remote.h  remote.cpp  remote.h  remote_manager.h  smarthome_code_remote.cpp  smarthome_code_remote.h  smarthome_event_remote.cpp  smarthome_event_remote.h  smarthome_gadget_remote.cpp  smarthome_gadget_remote.h  smarthome_remote.h
src/storage/: base_config.cpp  base_config.h  config.cpp  config.h  config_from_json.h  eeprom_gadget_mapping_coder.cpp  eeprom_gadget_mapping_coder.h  eeprom_manager.cpp  eeprom_manager.h  eeprom_storage.cpp  eeprom_storage.h  event_config.cpp  event_config.h  gadget_config.cpp  gadget_config.h  static_storage.cpp  static_storage.h  system_config.cpp  system_config.h  system_storage.cpp  system_storage.h  (+1 more)
test_desktop/: CMakeLists.txt  catch_test_example.cpp  prepare_cmake_for_tests.py  run_desktop_tests.py  test_api_decoder.cpp  test_api_encoder.cpp  test_api_manager.cpp  test_audio_player.h  test_boot_mode.cpp  test_characteristic.cpp  test_characteristic_meta.cpp  test_client_main.cpp  test_client_meta.cpp  test_color.cpp  test_config_event.cpp  test_config_gadgets.cpp  test_config_system.cpp  test_crc_calculator.cpp  test_eeprom_mapping_coder.cpp  test_eeprom_storage.cpp  test_event.cpp  test_event_manager.cpp  test_example.cpp  test_gadget_doorbell.cpp  test_gadget_factory.cpp  test_gadget_fan.cpp  test_gadget_lamp.cpp  test_gadget_manager.cpp  test_gadget_meta.cpp  test_gadget_sensor_motion.cpp  test_gadget_sensor_temperature.cpp  test_gadget_wallswitch.cpp  test_gadgets.cpp  test_ip_container.cpp  test_ir_gadget.cpp  test_mapping_reference.cpp  test_request_queue.cpp  test_scheduled_messages_manager.cpp  test_serial_gadget.cpp  test_string_methods.cpp  (+3 more)
test_desktop/cmake_modules/: gcovr.cmake
test_desktop/test_helpers/: request_response_listener.h  validator.cpp  validator.h
test_fixtures/: api_jsons.h  gadget_jsons.h
test_static/: CMakeLists.txt  run_static_tests.py  static_tests.cpp  test_example.cpp  test_request_queue.cpp
(+18 files in other folders)
